Fixed layout issue on my settings page

--- a/galasa-ui/src/styles/MySettings.module.css
+++ b/galasa-ui/src/styles/MySettings.module.css
@@ -23,6 +23,12 @@
     margin: 0 auto;
 }
 
+.btnContainer {
+    display: flex;
+    margin-top: 1rem;
+    justify-content: flex-end;
+}
+
 .tokensList{
     display: flex;
     flex-wrap: wrap;
